// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
<styled.span>
  <Toolbar.Group
    className=""
    direction="column"
    key=".0"
    shape=""
    size=""
  >
    <div />
  </Toolbar.Group>
</styled.span>
`;

exports[`When using snapshots Should render with the direction prop 1`] = `
<styled.span>
  <Toolbar.Group
    className=""
    direction="column"
    key=".0"
    shape=""
    size=""
  >
    <div />
  </Toolbar.Group>
</styled.span>
`;

exports[`When using snapshots Should render with the shape prop 1`] = `
<styled.span>
  <Toolbar.Group
    className=""
    direction="column"
    key=".0"
    shape="square"
    size=""
  >
    <div />
  </Toolbar.Group>
</styled.span>
`;

exports[`When using snapshots Should render with the size prop 1`] = `
<styled.span>
  <Toolbar.Group
    className=""
    direction="column"
    key=".0"
    shape=""
    size="xs"
  >
    <div />
  </Toolbar.Group>
</styled.span>
`;
